# MARGAN_DAS

./: README.md  index.html  package-lock.json
.github/workflows/: deploy.yml
CLIENT/: .vade-report  index.html  package-lock.json  package.json  vite.config.js
CLIENT/public/: robot.splinecode  site.webmanifest
CLIENT/public/ascii_art/: mypic_inverted.txt
CLIENT/src/: App.jsx  index.css
CLIENT/src/components/: About.jsx  Contact.jsx  CustomCursor.jsx  DecryptedAscii.jsx  Footer.jsx  Hero.jsx  Loader.jsx  MainContent.jsx  Navbar.jsx  Projects.jsx  Robot.jsx  ScrambledText.jsx  Skills.jsx  SplashScreen.jsx
SERVER/: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
SERVER/src/models/: User.h
SERVER/src/routes/: UserRoutes.cpp  UserRoutes.h
SERVER/src/utils/: Database.cpp  Database.h
ascii_art/: mypic.txt
assets/: howler-2sinWBKl.js  howler-4NAoVj-N.js  howler-CYri4PSE.js  howler-CfeYGl7z.js  howler-ClidO714.js  howler-ClmrrZdW.js  howler-CqQiRUKj.js  howler-CyrMmANH.js  howler-DctXey06.js  howler-DuGgQhCC.js  howler-StVQPdUO.js  howler-Z0DNDUsL.js  howler-gHXD-uev.js  howler-iwn39dHj.js  index-3dg_Rmyp.css  index-6GpHItqc.js  index-AKvYuENN.js  index-B5G8-e2u.css  index-BIUIf-x7.js  index-BK1_-daY.css  index-BOVTvoJk.css  index-BxXBsAAB.css  index-ByPtKhQh.js  index-C5EXISnn.js  index-C5eWKQnK.js  index-C9BaQ_Ud.css  index-CTAJjhIM.js  index-CUHDmRA8.css  index-CVdRZtrj.css  index-D5vHUrhq.js  index-DCOoO08R.css  index-DEaPEd8L.js  index-DGxDgqyu.js  index-DHAwfRvT.js  index-DMCHdKmR.css  index-DMfA_nfQ.js  index-DdOsQ8qx.css  index-Dp5AXuNb.js  index-DpK5zqaU.css  index-DxLo2ES6.css  (+5 more)
